# waveforward

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
docs/: install.md  public-readiness.md  pypi.md  release.md  security.md
scripts/: build-release-manifest.py  install-daemon-service.sh  install.sh
src/waveforward/: __init__.py  cli.py  core.py  daemon.py  files.py  history.py  runner.py  service.py  store.py  update.py
tests/: test_cli.py  test_core.py  test_daemon.py  test_files.py  test_history.py  test_runner.py  test_service.py  test_update.py
